--- a/PlaceLine/Info.plist
+++ b/PlaceLine/Info.plist
@@ -45,5 +45,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-</dict>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Konum izni gerekli</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Konum izni gerekli</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Konum izni gerekli</string></dict>
 </plist>
